--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,6 +160,13 @@ body {
 
 .btn-secondary:is(:hover, :focus) { background: var(--color-secondary); }
 
+.section-subtitle {
+  color: var(--color-font-h);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-bold);
+  margin-bottom: 15px;
+}
+
 /* ====== HEADER ====== */
 .header {
   position: absolute;
@@ -273,3 +280,45 @@ body {
 .hero .section-text { margin-bottom: 20px; }
 
 .hero .btn { margin-inline: auto; }
+
+/* ====== FEATURES ====== */
+.features { padding-block: var(--section-padding); }
+
+.features .section-title { margin-bottom: 40px; }
+
+.features :is(.section-subtitle, .section-title) { text-align: center; }
+
+.features-list {
+  display: grid;
+  gap: 25px;
+}
+
+.features-card {
+  border: 1px solid hsl(0, 0%, 90%);
+  padding: 30px;
+  text-align: center;
+}
+
+.features-card .card-icon {
+  max-width: max-content;
+  margin-inline: auto;
+  margin-bottom: 30px;
+}
+
+.features-card .card-title { margin-bottom: 15px; }
+
+.features-card .card-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  color: var(--color-primary);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-semibold);
+  transition: var(--transition);
+}
+
+.features-card .card-link:is(:hover, :focus) {
+  gap: 10px;
+  color: var(--color-tertiary);
+}
