--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -409,3 +409,145 @@ body {
   background: var(--color-tertiary);
   color: var(--color-white);
 }
+
+/* ====== FOOTER ====== */
+
+.footer-top { padding-block: var(--section-padding); }
+
+.footer .logo { margin-bottom: 20px; }
+
+.location-text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 30px;
+}
+
+.location-icon {
+  background: var(--color-primary);
+  color: var(--color-white);
+  font-size: 22px;
+  min-width: 40px;
+  height: 40px;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+}
+
+.address {
+  color: var(--color-primary);
+  font-size: var(--fs-5);
+  font-weight: var(--fw-semibold);
+  line-height: 1.6;
+  font-style: normal;
+}
+
+.quicklink-box { margin-bottom: 15px; }
+
+.quicklink-title,
+.contact-title {
+  font-weight: var(--fw-bold);
+  margin-bottom: 20px;
+}
+
+.quicklink-list { column-count: 2; }
+
+.quicklink-list > li { padding-block: 8px; }
+
+.quicklink {
+  color: var(--color-primary);
+  font-size: var(--fs-4);
+  transition: var(--transition);
+}
+
+.quicklink:is(:hover, :focus) { color: var(--color-secondary); }
+
+.contact-list {
+  background: var(--color-white);
+  padding: 20px;
+  border-radius: var(--radius-4);
+  box-shadow: 0 2px 50px 10px hsla(0, 0%, 0%, 0.08);
+}
+
+.contact-item {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 10px;
+}
+
+.contact-item:first-child {
+  padding-bottom: 8px;
+  border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
+  margin-bottom: 8px;
+}
+
+.contact-icon {
+  background: var(--color-tertiary);
+  color: var(--color-white);
+  min-width: 40px;
+  height: 40px;
+  display: grid;
+  place-items: center;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: var(--transition);
+}
+
+.contact-icon ion-icon { --ionicon-stroke-width: 40px; }
+
+.contact-item:hover .contact-icon {
+  background: var(--color-primary);
+  color: var(--color-white);
+}
+
+.contact-link {
+  color: var(--color-primary);
+  font-size: var(--fs-4);
+  transition: var(--transition);
+}
+
+.contact-link:is(:hover, :focus) { color: var(--color-secondary); }
+
+.footer-bottom {
+  background: var(--color-primary);
+  padding-block: 30px;
+}
+
+.copyright {
+  color: var(--color-white);
+  font-size: var(--fs-4);
+  line-height: 1.8;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
+.copyright > a {
+  display: inline-block;
+  color: inherit;
+  text-decoration: underline;
+  transition: var(--transition);
+}
+
+.copyright > a:is(:hover, :focus) { color: var(--color-secondary); }
+
+.social-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.social-link {
+  background: hsla(0, 0%, 100%, 0.2);
+  color: var(--color-white);
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  transition: var(--transition);
+}
+
+.social-link:is(:hover, :focus) { background: var(--color-secondary); }
