--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,3 +564,36 @@ body {
 }
 
 .social-link:is(:hover, :focus) { background: var(--color-secondary); }
+
+/* ====== GO TO TOP ====== */
+
+.go-top {
+  background: var(--color-background);
+  color: var(--color-primary);
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 20px;
+  width: 45px;
+  height: 45px;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  box-shadow: 0 2px 10px hsla(0, 0%, 0%, 0.1);
+  opacity: 0;
+  transform: translateY(10px);
+  visibility: hidden;
+  transition: var(--transition);
+  z-index: 2;
+}
+
+.go-top.active {
+  opacity: 1;
+  transform: translateY(0);
+  visibility: visible;
+}
+
+.go-top:is(:hover, :focus) {
+  background: var(--color-white);
+  color: var(--color-primary);
+}
